--- a/webapp/templates/nodeedit_modal.html
+++ b/webapp/templates/nodeedit_modal.html
@@ -14,6 +14,8 @@
                         <input id="node-name" name="name" class="form-control" type="text" placeholder="Node Name"
                                required>
                     </div>
+
+                    <div id="nodeedit-custom"></div>
                 </form>
             </div>
             <div class="modal-footer">
