--- a/corefx/src/main/resources/fxml/main.fxml
+++ b/corefx/src/main/resources/fxml/main.fxml
@@ -7,35 +7,40 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
 <StackPane fx:id="stackPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.core.Controller">
    <children>
       <BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
           <top>
-              <MenuBar BorderPane.alignment="CENTER">
-                  <menus>
-                      <Menu mnemonicParsing="false" text="File">
+            <VBox BorderPane.alignment="CENTER">
+               <children>
+                    <MenuBar>
+                        <menus>
+                            <Menu mnemonicParsing="false" text="File">
+                                <items>
+                                    <MenuItem mnemonicParsing="false" onAction="#onOpenXmlAction" text="Open XML" />
+                              <MenuItem mnemonicParsing="false" onAction="#onSaveXmlAction" text="Save XML" />
+                                </items>
+                            </Menu>
+                        <Menu mnemonicParsing="false" text="Session">
                           <items>
-                              <MenuItem mnemonicParsing="false" onAction="#onOpenXmlAction" text="Open XML" />
-                        <MenuItem mnemonicParsing="false" onAction="#onSaveXmlAction" text="Save XML" />
+                            <MenuItem mnemonicParsing="false" onAction="#onJoinSessionMenu" text="Join" />
+                              <MenuItem mnemonicParsing="false" onAction="#onSessionHooksMenu" text="Hooks" />
+                              <MenuItem mnemonicParsing="false" onAction="#onSessionOptionsMenu" text="Options" />
                           </items>
-                      </Menu>
-                  <Menu mnemonicParsing="false" text="Session">
-                    <items>
-                      <MenuItem mnemonicParsing="false" onAction="#onJoinSessionMenu" text="Join" />
-                        <MenuItem mnemonicParsing="false" onAction="#onSessionHooksMenu" text="Hooks" />
-                        <MenuItem mnemonicParsing="false" onAction="#onSessionOptionsMenu" text="Options" />
-                    </items>
-                  </Menu>
-                      <Menu mnemonicParsing="false" text="Help">
-                          <items>
-                        <MenuItem mnemonicParsing="false" onAction="#onHelpMenuWebsite" text="CORE Website" />
-                              <MenuItem mnemonicParsing="false" onAction="#onHelpMenuDocumentation" text="CORE Documentation" />
-                        <MenuItem mnemonicParsing="false" onAction="#onHelpMenuMailingList" text="CORE Mailing List" />
-                          </items>
-                      </Menu>
-                  </menus>
-              </MenuBar>
+                        </Menu>
+                            <Menu mnemonicParsing="false" text="Help">
+                                <items>
+                              <MenuItem mnemonicParsing="false" onAction="#onHelpMenuWebsite" text="CORE Website" />
+                                    <MenuItem mnemonicParsing="false" onAction="#onHelpMenuDocumentation" text="CORE Documentation" />
+                              <MenuItem mnemonicParsing="false" onAction="#onHelpMenuMailingList" text="CORE Mailing List" />
+                                </items>
+                            </Menu>
+                        </menus>
+                    </MenuBar>
+               </children>
+            </VBox>
           </top>
           <center>
             <AnchorPane>
