--- a/corefx/src/main/resources/fxml/main.fxml
+++ b/corefx/src/main/resources/fxml/main.fxml
@@ -37,6 +37,11 @@
                               <MenuItem mnemonicParsing="false" onAction="#onHelpMenuMailingList" text="CORE Mailing List" />
                                 </items>
                             </Menu>
+                        <Menu mnemonicParsing="false" text="Test">
+                          <items>
+                            <MenuItem mnemonicParsing="false" onAction="#onTestMenuCharts" text="Charts" />
+                          </items>
+                        </Menu>
                         </menus>
                     </MenuBar>
                </children>
