gui - added test dialog proof of concept for using leaflet.js for geospatial display

--- a/corefx/src/main/resources/fxml/main.fxml
+++ b/corefx/src/main/resources/fxml/main.fxml
@@ -47,6 +47,7 @@
                         <Menu mnemonicParsing="false" text="Test">
                           <items>
                             <MenuItem mnemonicParsing="false" onAction="#onTestMenuCharts" text="Charts" />
+                              <MenuItem mnemonicParsing="false" onAction="#onTestMenuGeo" text="Geo" />
                           </items>
                         </Menu>
                         </menus>
