--- a/corefx/src/main/resources/fxml/link_details.fxml
+++ b/corefx/src/main/resources/fxml/link_details.fxml
@@ -23,7 +23,7 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <Label styleClass="details-label" text="Link Details" GridPane.columnSpan="2147483647">
+            <Label styleClass="details-title" text="Link Details" GridPane.columnSpan="2147483647">
                <font>
                   <Font name="System Bold" size="17.0" />
                </font>
