corefx - added connect dialog to allow connections after initial attempt

--- a/corefx/src/main/resources/fxml/main.fxml
+++ b/corefx/src/main/resources/fxml/main.fxml
@@ -17,10 +17,15 @@
                <children>
                     <MenuBar>
                         <menus>
+                        <Menu mnemonicParsing="false" text="Main">
+                          <items>
+                              <MenuItem mnemonicParsing="false" onAction="#onCoreMenuConnect" text="Connection" />
+                          </items>
+                        </Menu>
                             <Menu mnemonicParsing="false" text="File">
                                 <items>
-                                    <MenuItem mnemonicParsing="false" onAction="#onOpenXmlAction" text="Open XML" />
                               <MenuItem fx:id="saveXmlMenuItem" disable="true" mnemonicParsing="false" onAction="#onSaveXmlAction" text="Save XML" />
+                              <MenuItem mnemonicParsing="false" onAction="#onOpenXmlAction" text="Open XML" />
                                 </items>
                             </Menu>
                         <Menu mnemonicParsing="false" text="Session">
