--- a/corefx/src/main/resources/fxml/main.fxml
+++ b/corefx/src/main/resources/fxml/main.fxml
@@ -33,14 +33,15 @@
                           <items>
                             <MenuItem mnemonicParsing="false" onAction="#onJoinSessionMenu" text="Join" />
                               <MenuItem mnemonicParsing="false" onAction="#onSessionHooksMenu" text="Hooks" />
+                              <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuLocation" text="Location" />
                               <MenuItem mnemonicParsing="false" onAction="#onSessionOptionsMenu" text="Options" />
                           </items>
                         </Menu>
                         <Menu mnemonicParsing="false" text="Options">
                           <items>
                             <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuNodeTypes" text="Nodes" />
-                              <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuLocation" text="Location" />
                               <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuBackground" text="Background" />
+                              <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuPreferences" text="Preferences" />
                           </items>
                         </Menu>
                             <Menu mnemonicParsing="false" text="Help">
