--- a/corefx/src/main/resources/fxml/main.fxml
+++ b/corefx/src/main/resources/fxml/main.fxml
@@ -18,30 +18,26 @@
                <children>
                     <MenuBar>
                         <menus>
-                        <Menu mnemonicParsing="false" text="Main">
+                        <Menu mnemonicParsing="false" text="Menu">
                           <items>
                               <MenuItem mnemonicParsing="false" onAction="#onCoreMenuConnect" text="Connection" />
+                                  <Menu mnemonicParsing="false" text="File">
+                                      <items>
+                                    <MenuItem fx:id="saveXmlMenuItem" disable="true" mnemonicParsing="false" onAction="#onSaveXmlAction" text="Save XML" />
+                                    <MenuItem mnemonicParsing="false" onAction="#onOpenXmlAction" text="Open XML" />
+                                      </items>
+                                  </Menu>
+                            <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuNodeTypes" text="Nodes" />
+                              <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuBackground" text="Background" />
+                              <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuPreferences" text="Preferences" />
                           </items>
                         </Menu>
-                            <Menu mnemonicParsing="false" text="File">
-                                <items>
-                              <MenuItem fx:id="saveXmlMenuItem" disable="true" mnemonicParsing="false" onAction="#onSaveXmlAction" text="Save XML" />
-                              <MenuItem mnemonicParsing="false" onAction="#onOpenXmlAction" text="Open XML" />
-                                </items>
-                            </Menu>
                         <Menu mnemonicParsing="false" text="Session">
                           <items>
                             <MenuItem mnemonicParsing="false" onAction="#onJoinSessionMenu" text="Join" />
                               <MenuItem mnemonicParsing="false" onAction="#onSessionHooksMenu" text="Hooks" />
                               <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuLocation" text="Location" />
                               <MenuItem mnemonicParsing="false" onAction="#onSessionOptionsMenu" text="Options" />
-                          </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Options">
-                          <items>
-                            <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuNodeTypes" text="Nodes" />
-                              <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuBackground" text="Background" />
-                              <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuPreferences" text="Preferences" />
                           </items>
                         </Menu>
                             <Menu mnemonicParsing="false" text="Help">
