--- a/corefx/src/main/resources/fxml/main.fxml
+++ b/corefx/src/main/resources/fxml/main.fxml
@@ -27,13 +27,13 @@
                                     <MenuItem mnemonicParsing="false" onAction="#onOpenXmlAction" text="Open XML" />
                                       </items>
                                   </Menu>
+                            <MenuItem mnemonicParsing="false" onAction="#onSessionMenu" text="Sessions" />
                             <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuNodeTypes" text="Nodes" />
                               <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuPreferences" text="Preferences" />
                           </items>
                         </Menu>
                         <Menu mnemonicParsing="false" text="Session">
                           <items>
-                            <MenuItem mnemonicParsing="false" onAction="#onJoinSessionMenu" text="Join" />
                               <MenuItem mnemonicParsing="false" onAction="#onSessionHooksMenu" text="Hooks" />
                               <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuLocation" text="Location" />
                               <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuBackground" text="Background" />
