--- a/corefx/src/main/resources/fxml/gui_preferences.fxml
+++ b/corefx/src/main/resources/fxml/gui_preferences.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXColorPicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
@@ -17,6 +18,18 @@
                   <JFXTextField fx:id="mobilityFilePathTextField" />
                   <Label text="Icon Path" />
                   <JFXTextField fx:id="iconPathTextField" />
+               </children>
+            </VBox>
+         </content>
+      </TitledPane>
+      <TitledPane animated="false" collapsible="false" text="Graph">
+         <content>
+            <VBox spacing="10.0">
+               <children>
+                  <Label text="Node Label" />
+                  <JFXColorPicker fx:id="nodeLabelColorPicker" maxWidth="1.7976931348623157E308" />
+                  <Label text="Node Label Background" />
+                  <JFXColorPicker fx:id="nodeLabelBackgroundColorPicker" maxWidth="1.7976931348623157E308" />
                </children>
             </VBox>
          </content>
