corefx - updated details panel css, changed how graph toolbar node/device selection works

--- a/corefx/src/main/resources/css/main.css
+++ b/corefx/src/main/resources/css/main.css
@@ -12,7 +12,7 @@
 }
 
 .details-label {
-    -fx-background-color: slategrey;
+    -fx-background-color: black;
     -fx-pref-width: Infinity;
     -fx-text-fill: white;
     -fx-alignment: center;
