corefx - changed core client to use address and port, added pseudo terminal for remote connections

--- a/corefx/src/main/resources/css/main.css
+++ b/corefx/src/main/resources/css/main.css
@@ -30,6 +30,7 @@
 }
 
 .code {
+    -fx-background-color: black;
     -fx-text-fill: lime;
     -fx-font-family: monospaced;
     -jfx-focus-color: lime;
