--- a/corefx/src/main/resources/fxml/main.fxml
+++ b/corefx/src/main/resources/fxml/main.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXProgressBar?>
 <?import javafx.embed.swing.SwingNode?>
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -39,6 +40,12 @@
                               <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuLocation" text="Location" />
                               <MenuItem mnemonicParsing="false" onAction="#onOptionsMenuBackground" text="Background" />
                               <MenuItem mnemonicParsing="false" onAction="#onSessionOptionsMenu" text="Options" />
+                          </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Widgets">
+                          <items>
+                              <CheckMenuItem fx:id="throughputMenuItem" mnemonicParsing="false" text="Throughput" />
+                              <MenuItem mnemonicParsing="false" text="Throughput Config" />
                           </items>
                         </Menu>
                             <Menu mnemonicParsing="false" text="Help">
