initial sweeping changes to call all usages of various interface related variables and functions (netif, interface, if, ifc, etc) to use a consistent name iface

--- a/daemon/core/configservices/utilservices/templates/index.html
+++ b/daemon/core/configservices/utilservices/templates/index.html
@@ -5,8 +5,8 @@
 <p>This is the default web page for this server.</p>
 <p>The web server software is running but no content has been added, yet.</p>
 <ul>
-% for ifc in interfaces:
-    <li>${ifc.name} - ${ifc.addrlist}</li>
+% for iface in ifaces:
+    <li>${iface.name} - ${iface.addrlist}</li>
 % endfor
 </ul>
 </body>
